Updated the demeter-ag

--- a/src/index.html
+++ b/src/index.html
@@ -163,19 +163,19 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Demeter Ag</h3>
                 <div>
                   <p class="mb-4">
-                    Demonstrate in this description the skills of a programmer: such as having commitment, 
-                    having perseverance and accepting alternative solutions. Remember that being a portfolio you are not selling the project, 
-                    you are selling yourself, it reflects the resources used: Frameworks, libraries, platforms, etc.
+                    This ASP.NET web application demonstrates full-stack development, combining front-end technologies (HTML, CSS, JavaScript) with server-side C# functionality.
+                     Designed for an agricultural machinery dealership, it features secure user authentication, database connectivity, order history management, and 
+                     additional interactive features
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://demeterag-cse6cqhbgzcdfkh4.centralus-01.azurewebsites.net"
                 >
                   See Live
                 </a>
@@ -183,7 +183,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/comicparrot/agridealer-webapp/tree/master/DemeterMachine"
                 >
                   Source Code
                 </a>
