--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
 
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- Todo: remove the below script once you finish your portfolio 
+    <script async defer src="https://buttons.github.io/buttons.js"></script>-->
   </head>
 
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
@@ -191,7 +191,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://demeterag-cse6cqhbgzcdfkh4.centralus-01.azurewebsites.net" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -202,7 +202,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/demeter.png"
                     />
                   </div>
                 </a>
