Update paths for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="./assets/profile.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -90,7 +90,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="./assets/resume.pdf"
                 >
                   View Resume
                 </a>
@@ -150,7 +150,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/background-gen.png"
+                      src="./assets/background-gen.png"
                     />
                   </div>
                 </a>
@@ -202,7 +202,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/demeter.png"
+                      src="./assets/demeter.png"
                     />
                   </div>
                 </a>
@@ -253,7 +253,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="./assets/project.jpg"
                     />
                   </div>
                 </a>
