--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Please email me to discuss</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:markrw2011@gmail.com"
             >Call to Action</a
           >
         </div>
@@ -304,14 +304,14 @@
 
         <hr />
 
-        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
+        <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it
         <p class="footer__text">
           © 2021 - Template developed by
           <a rel="noreferrer" href="https://github.com/cobiwave" target="_blank"
             >Jacobo Martínez</a
           >
         </p>
-
+ -->
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
         <p class="mt-3 pt-3">
           <a
