Update paths for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                Hi, I’m Mark Waldner, a passionate Full-Stack Web Developer who loves turning ideas into fully functional web applications. 
+                I enjoy working across the entire stack—from designing intuitive front-end interfaces to building robust server-side logic and databases.
+                I thrive on solving complex problems, learning new technologies, and creating projects that are not only functional but also visually appealing. 
+                Outside of coding, I enjoy hunting,fishing and spending time with my family, which inspire me to bring creativity and innovation into my work.
+                I’m always excited to collaborate on new projects, tackle challenges, and contribute to meaningful software solutions. 
+                Feel free to explore my portfolio to see some of the work I’m proud of!
               </p>
               <p class="about-wrapper__info-text">
                 Extra Information about you! like hobbies and your goals.
