--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 I thrive on solving complex problems, learning new technologies, and creating projects that are not only functional but also visually appealing. 
                 Outside of coding, I enjoy hunting,fishing and spending time with my family, which inspire me to bring creativity and innovation into my work.
                 I’m always excited to collaborate on new projects, tackle challenges, and contribute to meaningful software solutions. 
-                Feel free to explore my <span href="#projects">portfolio</span> to see some of the work I’m proud of!
+                Feel free to explore my <a href="#projects" class="b fw1">portfolio</a> to see some of the work I’m proud of!
               </p>
 
               <span class="d-flex mt-3">
