--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 I thrive on solving complex problems, learning new technologies, and creating projects that are not only functional but also visually appealing. 
                 Outside of coding, I enjoy hunting,fishing and spending time with my family, which inspire me to bring creativity and innovation into my work.
                 I’m always excited to collaborate on new projects, tackle challenges, and contribute to meaningful software solutions. 
-                Feel free to explore my <a href="#projects" class="b fw1">portfolio</a> to see some of the work I’m proud of!
+                Feel free to explore my <a href="#projects" class="b fw2">portfolio</a> to see some of the work I’m proud of!
               </p>
 
               <span class="d-flex mt-3">
@@ -221,10 +221,67 @@
           </div>
           <!-- /END Project -->
           
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Robofriends</h3>
+                <div>
+                  <p class="mb-4">
+                    This React project is a dynamic, responsive web application featuring a real-time search function. 
+                    It retrieves and displays data from an API, allowing users to quickly filter results as they type. 
+                    The search is implemented with state management and optimized rendering, ensuring fast and smooth user interaction.
+                    The clean, modular code structure makes it easy to maintain and expand with additional features.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://comicparrot.github.io/robofriends/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/comicparrot/robofriends"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://comicparrot.github.io/robofriends/" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="./assets/robofriends.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
         </div>
       </div>
     </section>
     <!-- /END Projects Section -->
+
+
+
+
 
     <!-- **** Contact Section **** -->
     <section id="contact">
