Added chuck norris

--- a/index.html
+++ b/index.html
@@ -274,6 +274,61 @@
           </div>
           <!-- /END Project -->
 
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Chuck Norris</h3>
+                <div>
+                  <p class="mb-4">
+                    This React project is a dynamic, responsive web application featuring a real-time API interactions. 
+                    It retrieves and displays data from an API, allowing users to click an button to toggle a dynamic output. 
+                    The clean, modular code structure makes it easy to maintain and expand with additional features.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://comicparrot.github.io/chuck-norris-generator/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/comicparrot/chuck-norris-generator"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://comicparrot.github.io/chuck-norris-generator/" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="./assets/robofriends.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+
+
+
         </div>
       </div>
     </section>
