--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./styles.scss" />
+    <!--<link rel="stylesheet" href="./styles.scss" />-->
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -317,7 +317,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/robofriends.png"
+                      src="./assets/chuck.png"
                     />
                   </div>
                 </a>
